[package]
#[allow(non_snake_case)]
name = "toDoCli"
version = "0.1.0"
edition = "2024"

#while adding dependencies, use serde = { version = "1.0.228", features = ["derive"] }
# cargo add serde --features derive
[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
[workspace]
